base mobile adaptation

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 570px) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   &__logo {
@@ -27,6 +32,12 @@
 
     p {
       color: #7b7b7b;
+    }
+  }
+
+  &__cart {
+    @media (max-width: 570px) {
+      margin-top: 20px;
     }
   }
 }
