--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,6 +14,11 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media (max-width: 840px) {
+    width: calc(100vw - 30px);
+    margin-top: 20px;
+  }
 }
 
 .content {
@@ -27,12 +32,24 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media (max-width: 840px) {
+      justify-content: center;
+    }
   }
 
   &__top {
     display: flex;
+    // flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 840px) {
+      flex-wrap: wrap;
+      justify-content: flex-end;
+
+      gap: 20px;
+    }
   }
 }
 
@@ -43,6 +60,7 @@ body {
   &--cart {
     max-width: 820px;
     margin: 90px auto;
+
     .content__title {
       margin: 0;
     }
