--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -3,12 +3,18 @@
 .categories {
   ul {
     display: flex;
+    flex-wrap: wrap;
+
+    @media (max-width: 840px) {
+      justify-content: space-evenly;
+    }
 
     li {
       background-color: #f9f9f9;
       padding: 13px 30px;
       border-radius: 30px;
       margin-right: 10px;
+      margin-bottom: 10px;
       font-weight: bold;
       cursor: pointer;
       transition: background-color 0.1s ease-in-out;
