--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,6 +14,7 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+  height: fit-content;
 
   @media (max-width: 840px) {
     width: calc(100vw - 30px);
