--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -16,9 +16,10 @@ body {
   max-width: 1400px;
   height: fit-content;
 
-  @media (max-width: 840px) {
-    width: calc(100vw - 30px);
+  @media (max-width: 420px) {
+    width: 100vw;
     margin-top: 20px;
+    border-radius: 0;
   }
 }
 
@@ -30,12 +31,21 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 11px;
 
-    @media (max-width: 840px) {
-      justify-content: center;
+    @media (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 1050px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 750px) {
+      grid-template-columns: 1fr;
     }
   }
 
@@ -60,7 +70,7 @@ body {
 
   &--cart {
     max-width: 820px;
-    margin: 90px auto;
+    margin: 10px auto;
 
     .content__title {
       margin: 0;
@@ -122,6 +132,10 @@ body {
         color: darken($color: #b6b6b6, $amount: 50);
       }
     }
+  }
+
+  .content__items {
+    display: block;
   }
 
   &__item {
