--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -1,17 +1,14 @@
 @import '../variables';
 
+.pizza-block-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 .pizza-block {
   width: 280px;
   text-align: center;
   margin-bottom: 65px;
-
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
-
-    @media (max-width: 652px) {
-      margin-right: 0;
-    }
-  }
 
   &__image {
     width: 260px;
