add pagination & search

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,9 +9,10 @@
     align-items: center;
     justify-content: space-between;
 
-    @media (max-width: 570px) {
+    @media (max-width: 870px) {
       flex-wrap: wrap;
       justify-content: center;
+      gap: 20px;
     }
   }
 
@@ -32,12 +33,6 @@
 
     p {
       color: #7b7b7b;
-    }
-  }
-
-  &__cart {
-    @media (max-width: 570px) {
-      margin-top: 20px;
     }
   }
 }
