--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -81,8 +81,14 @@ body {
 .cart {
   &__top {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 555px) {
+      justify-content: center;
+      gap: 30px;
+    }
   }
 
   .content__title {
@@ -140,20 +146,26 @@ body {
 
   &__item {
     display: flex;
-    width: 100%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    max-width: 100%;
     border-top: 1px solid $gray-line;
-    padding-top: 30px;
-    margin-top: 30px;
+    padding-top: 2rem;
+    margin-top: 2rem;
+
+    @media (max-width: 670px) {
+      align-items: center;
+      flex-direction: column;
+      gap: 20px;
+    }
 
     &-img {
       display: flex;
       align-items: center;
-      margin-right: 15px;
-      width: 10%;
 
       img {
-        width: 80px;
-        height: 80px;
+        width: 5rem;
+        height: 5rem;
       }
     }
 
@@ -161,7 +173,6 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 40%;
 
       h3 {
         font-weight: bold;
@@ -180,7 +191,6 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
 
       &-minus {
         svg {
@@ -192,6 +202,7 @@ body {
 
       b {
         font-size: 22px;
+        margin: 0 10px;
       }
     }
 
@@ -199,7 +210,6 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 33%;
 
       b {
         font-weight: bold;
@@ -211,8 +221,6 @@ body {
     &-remove {
       display: flex;
       align-items: center;
-      justify-content: flex-end;
-      width: 4%;
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -246,7 +254,13 @@ body {
 
     &-details {
       display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
       justify-content: space-between;
+
+      @media (max-width: 620px) {
+        justify-content: center;
+      }
 
       span {
         font-size: 22px;
@@ -262,7 +276,13 @@ body {
     &-buttons {
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 20px;
       margin-top: 40px;
+
+      @media (max-width: 620px) {
+        justify-content: center;
+      }
 
       .go-back-btn {
         display: flex;
